Revision history for {{$dist->name}}

{{$NEXT}}

0.007     2012-08-14 13:56:50 PDT-0700 (Karen Etheridge)
          - cleanup of domain->PSGI app functionality for stable release:
            - string mappings in map_response now match against the URI host,
              not the full URI string
            - register_domain is now called register_psgi; unregister_domain
              is now unregister_psgi; unregister_all is removed, as unmap_all
              will do the right thing
            - domain mappings no longer take priority over other mapped
              responses; all mappings are now tested in the order they were
              added (with instance mappings matched first over global
              mappings, as before)

0.006-TRIAL  2012-07-28 16:03:24 PDT-0700 (Karen Etheridge)
          - new domain->PSGI app functionality, and methods register_domain,
            unregister_domain, unregister_all

0.005     2012-07-20 17:37:26 PDT-0700 (Karen Etheridge)
          - additional error checking and tests
          - also support objects with &{} overloading, in place of subrefs
          - now doing the same end-of-response cleanup handling that the real LWPUA does:
            - saving the request on the response
            - adding Client-Date header
            - respect show_progress settings
            - runs handlers

0.004     2012-06-27 15:41:02 PDT-0700 (Karen Etheridge)
          - map_response now accepts a coderef in place of the HTTP::Response
            object to return, to allow basing the response data on what was in
            the request

0.003     2012-06-23 22:11:53 PDT-0700 (Karen Etheridge)
          - fix compile error on perls earlier than 5.9.5 (which did not have
            re::is_regexp)

0.002     2012-06-23 09:36:51 PDT-0700 (Karen Etheridge)
          - minor documentation fixes
          - renamed from Test::Mock::LWP::UserAgent to Test::LWP::UserAgent
            (thanks, mst!)
